header and footer fix ready

--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
     <header>
         <nav>
             <a href="#welcome"><img src="./assets/test-logo.png" alt=""></a>
-            <ul>
+            <ul class="navigation">
                 <li><a href="#students">Klasgenoten</a></li>
                 <li><a href="#locations">Locaties</a></li>
                 <li><a href="#credits">Credits</a></li>
             </ul>
         </nav>
     </header>
+                        <svg class="wave4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+         C384,26.5,480,21.5,576,34.65
+         C672,48,768,80,864,98.65
+         C960,117.5,1056,122.5,1152,106.65
+         C1248,90.5,1344,53.5,1392,34.65
+         L1440,16L1440,0L0,0Z">
+                </path>
+
+            </svg>
     <main>
         <!-- Dit doet Semih -->
         <article>
