--- a/index.html
+++ b/index.html
@@ -411,14 +411,28 @@
         <section>
             <h3 class="hotspots" id="locations"> Hotspots binnen het HVA</h3>
             <article class="wrapper-location">
-                <img class="location-image" src="./assets/aquarium.png">
+                <article class="grid-image">
+                    <img class="location-image" src="./assets/aquarium.png">
+                </article>
                 <img class="location-image" src="./assets/roomforthought.png">
-                <img class="location-image" src="./assets/imgtest.png">
-                <img class="location-image" src="./assets/imgtest.png">
-                <img class="location-image" src=".assets/imgtest.png">
-                <img class="location-image" src="./assets/imgtest.png">
-                <img class="location-image" src="./assets/imgtest.png">
-                <img class="location-image" src="./assets/imgtest.png">
+                <article class="grid-image">
+                    <img class="location-image" src="./assets/werkplek-bank.png">
+                </article>
+                <article class="grid-image">
+                    <img class="location-image" src="./assets/werkplek2.png">
+                </article>
+                <article class="grid-image">
+                    <img class="location-image" src="./assets/werkplek3.png">
+                </article>
+                <article class="grid-image">
+                    <img class="location-image" src="./assets/werkplekmetscherm.png">
+                </article>
+                <article class="grid-image">
+                    <img class="location-image" src="./assets/uitzicht.png">
+                </article>
+                <article class="grid-image">
+                    <img class="location-image" src="./assets/relaxplek.png">
+                </article>
             </article>
         </section>
         <!-- Dit doet Gijs -->
