added hover state for location images

--- a/index.html
+++ b/index.html
@@ -408,30 +408,54 @@
             </svg>
         </section>
         <!-- Dit doet Gijs -->
-        <section>
-            <h3 class="hotspots" id="locations"> Hotspots binnen het HVA</h3>
-            <article class="wrapper-location">
-                <article class="grid-image">
-                    <img class="location-image" src="./assets/aquarium.png">
+        <h3 class="hotspots" id="locations"> Hotspots binnen het HVA</h3>
+        <section class="wrapper-location">
+            <article class="grid-image">
+                <img class="location-image" src="./assets/aquarium.png">
+                <article class="overlay-text">
+                    <p class="tekst">Aquarium</p>
                 </article>
+            </article>
+            <article class="grid-image">
                 <img class="location-image" src="./assets/roomforthought.png">
-                <article class="grid-image">
-                    <img class="location-image" src="./assets/werkplek-bank.png">
+                <article class="overlay-text">
+                    <p class="tekst">Room for inspiration</p>
                 </article>
-                <article class="grid-image">
-                    <img class="location-image" src="./assets/werkplek2.png">
+            </article>
+            <article class="grid-image">
+                <img class="location-image" src="./assets/werkplek-bank.png">
+                <article class="overlay-text">
+                    <p class="tekst">Ruimte voor presentaties</p>
                 </article>
-                <article class="grid-image">
-                    <img class="location-image" src="./assets/werkplek3.png">
+            </article>
+            <article class="grid-image">
+                <img class="location-image" src="./assets/werkplek2.png">
+                <article class="overlay-text">
+                    <p class="tekst">Ruimte om samen te werken</p>
                 </article>
-                <article class="grid-image">
-                    <img class="location-image" src="./assets/werkplekmetscherm.png">
+            </article>
+            <article class="grid-image">
+                <img class="location-image" src="./assets/werkplek3.png">
+                <article class="overlay-text">
+                    <p class="tekst">Rustige werkplek</p>
                 </article>
-                <article class="grid-image">
-                    <img class="location-image" src="./assets/uitzicht.png">
+            </article>
+            <article class="grid-image">
+                <img class="location-image" src="./assets/werkplekmetscherm.png">
+                <article class="overlay-text">
+                    <p class="tekst">Ruimte met extra scherm</p>
                 </article>
-                <article class="grid-image">
-                    <img class="location-image" src="./assets/relaxplek.png">
+            </article>
+            <article class="grid-image">
+                <img class="location-image" src="./assets/uitzicht.png">
+                <article class="overlay-text">
+                    <p class="tekst">Mooi uitzicht</p>
+                </article>
+            </article>
+            <article class="grid-image">
+                <img class="location-image" src="./assets/relaxplek.png">
+                <article class="overlay-text">
+                    <p class="tekst">Pauze plek buiten</p>
                 </article>
             </article>
         </section>
