hover aangepast header

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <article class="mugshot-article-container">
             <h2 id="students">Alle Klasgenoten</h2>
             <section class="mugshot-image-container">
-                <figure class="mugshot">
+                  <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-2.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-2-2.png" alt="">
                     <figcaption>
@@ -80,7 +80,7 @@
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!--https://emrebahar0912.github.io/your-tribe-profile-card/-->
-                </figure>
+                    </figure>  
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-3.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-3-2.png" alt="">
@@ -332,13 +332,13 @@
 
                 </svg>
             </section>
-            <section class="mugshot-image-container">
+            <section class="mugshot-image-container container-docenten">
                 <h2 id="docenten">Docenten</h2>
                 <figure class="mugshot">
-                    <img class="mugshot-first" src="./assets/mugshots/docent-1.png" alt="">
-                    <img class="mugshot-after" src="./assets/mugshots/docent-1-2.png" alt="">
+                    <img class="mugshot-first" src="./assets/mugshots/docent-3.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/docent-3-2.png" alt="">
                     <figcaption>
-                        <h3>Suus</h3>
+                        <h3>Joost</h3>
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
@@ -351,10 +351,10 @@
                     <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
-                    <img class="mugshot-first" src="./assets/mugshots/docent-3.png" alt="">
-                    <img class="mugshot-after" src="./assets/mugshots/docent-3-2.png" alt="">
+                    <img class="mugshot-first" src="./assets/mugshots/docent-1.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/docent-1-2.png" alt="">
                     <figcaption>
-                        <h3>Joost</h3>
+                        <h3>Suus</h3>
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
