link icon toegevoegd en alle linkjes die ik kon vinden

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-2-2.png" alt="">
                     <figcaption>
                         <h3>Emre</h3>
-                        <p>18</p>
+                        <a href="https://emrebahar0912.github.io/your-tribe-profile-card/">🔗</a>
+                        <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!--https://emrebahar0912.github.io/your-tribe-profile-card/-->
@@ -86,7 +87,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-3-2.png" alt="">
                     <figcaption>
                         <h3>Caitlin</h3>
-                        <p> 00</p>
+                        <a href="https://caitlin-fdnd.github.io/your-tribe-profile-card/">🔗</a>
+                        <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!--https://caitlin-fdnd.github.io/your-tribe-profile-card/-->
@@ -114,6 +116,7 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-6-2.png" alt="">
                     <figcaption>
                         <h3>Isaac</h3>
+                        <a href="https://isaaceswa.github.io/your-tribe-profile-card/">🔗</a>
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
@@ -124,7 +127,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-7-2.png" alt="">
                     <figcaption>
                         <h3>Kate</h3>
-                        <p>18</p>
+                        <a href="https://kitkatisvibing.github.io/your-tribe-profile-card/">🔗</a>
+                        <p>18 </p>
                     </figcaption>
                     <div class="eye-bar glasses"></div>
                     <!--https://kitkatisvibing.github.io/your-tribe-profile-card/-->
@@ -134,7 +138,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-8-2.png" alt="">
                     <figcaption>
                         <h3>Kayleigh</h3>
-                        <p>00</p>
+                        <a href="https://kayleighhhhh.github.io/profile-card-kayleigh/">🔗</a>
+                        <p>00 </p>
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!--https://kayleighhhhh.github.io/profile-card-kayleigh/-->
@@ -144,7 +149,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-9-2.png" alt="">
                     <figcaption>
                         <h3>Mohamed</h3>
-                        <p>20</p>
+                        <a href="https://mohamedelib.github.io/your-tribe-profile-card/">🔗</a>
+                        <p>20 </p>
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!--https://mohamedelib.github.io/your-tribe-profile-card/-->
@@ -154,7 +160,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-10-2.png" alt="">
                     <figcaption>
                         <h3>Lesther</h3>
-                        <p>00</p>
+                        <a href="https://lestherluis.github.io/lesthercard/">🔗</a>
+                        <p>00 </p>
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!--https://lestherluis.github.io/lesthercard/-->
@@ -173,7 +180,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-12-2.png" alt="">
                     <figcaption>
                         <h3>Khitam</h3>
-                        <p>20</p>
+                        <a href="https://khiettt.github.io/your-tribe-profile-card/">🔗</a>
+                        <p>20 </p>
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!--https://khiettt.github.io/your-tribe-profile-card/-->
@@ -195,14 +203,14 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
-
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-15.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-15-2.png" alt="">
                     <figcaption>
                         <h3>Rowan</h3>
-                        <p>00</p>
+                        <a href="https://scar055.github.io/your-tribe-profile-card/">🔗</a>
+                        <p>00 </p>
                     </figcaption>
                     <div class="eye-bar glasses"></div>
                     <!--https://scar055.github.io/your-tribe-profile-card/-->
@@ -212,6 +220,7 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-16-2.png" alt="">
                     <figcaption>
                         <h3>Roxy</h3>
+                        <a href="https://rox-codelabs.github.io/your-tribe-profile-card/">🔗</a>
                         <p>25</p>
                     </figcaption>
                     <div class="eye-bar"></div>
@@ -222,6 +231,7 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-17-2.png" alt="">
                     <figcaption>
                         <h3>Tjeerd</h3>
+                        <a href="https://tjeerd-jw.github.io/your-tribe-profile-card/">🔗</a>
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar glasses"></div>
@@ -232,6 +242,7 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-18-2.png" alt="">
                     <figcaption>
                         <h3>Tin</h3>
+                        <a href="https://webtins.github.io/your-tribe-profile-card/">🔗</a>
                         <p>21</p>
                     </figcaption>
                     <div class="eye-bar glasses"></div>
@@ -242,7 +253,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-19-2.png" alt="">
                     <figcaption>
                         <h3>Semih</h3>
-                        <p>19</p>
+                        <a href="https://hexterty46.github.io/your-tribe-profile-card/">🔗</a>
+                        <p>19 </p>
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!--https://hexterty46.github.io/your-tribe-profile-card/-->
@@ -255,7 +267,6 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
-                    <!--geen link-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-21.png" alt="">
@@ -265,14 +276,14 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
-                    <!--geen link-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-22.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-22-2.png" alt="">
                     <figcaption>
                         <h3>Sven</h3>
-                        <p>22</p>
+                        <a href="https://svenvandijk22.github.io/your-tribe-profile-card/">🔗</a>
+                        <p>22 </p>
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!--https://svenvandijk22.github.io/your-tribe-profile-card/-->
@@ -282,7 +293,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-23-2.png" alt="">
                     <figcaption>
                         <h3>Thomas</h3>
-                        <p>19</p>
+                        <a href="https://thomasseisveld.github.io/profilecard-Thomas/">🔗</a>
+                        <p>19 </p>
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!--https://thomasseisveld.github.io/profilecard-Thomas/-->
@@ -292,7 +304,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-1-2.png" alt="">
                     <figcaption>
                         <h3>Gijs</h3>
-                        <p>19</p>
+                        <a href="https://gijscreator.github.io/your-tribe-profile-card/">🔗</a>
+                        <p>19 </p>
                     </figcaption>
                     <div class="eye-bar"></div>
                     <!-- https://gijscreator.github.io/your-tribe-profile-card/ -->
@@ -302,7 +315,8 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-24-2.png" alt="">
                     <figcaption>
                         <h3>Angle</h3>
-                        <p>00</p>
+                        <a href="https://angelaaliyah12.github.io/your-tribe-profile-card/">🔗</a>
+                        <p>00 </p>
                     </figcaption>
                     <div class="eye-bar angle"></div>
                     <!--https://angelaaliyah12.github.io/your-tribe-profile-card/-->
@@ -347,6 +361,7 @@
                     <img class="mugshot-after" src="./assets/mugshots/docent-2-2.png" alt="">
                     <figcaption>
                         <h3>Koop</h3>
+                        <a href="https://koopreynders.github.io/profile-card/">🔗</a>
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
@@ -363,6 +378,7 @@
                     <img class="mugshot-after" src="./assets/mugshots/docent-4-2.png" alt="">
                     <figcaption>
                         <h3>Cyd</h3>
+                        <a href="https://cydstumpel.github.io/your-tribe-profile-card/">🔗</a>
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
