eye-bar beter geplaatst

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                         <h3>Koop</h3>
                         <a href="https://koopreynders.github.io/profile-card/">🔗</a>
                     </figcaption>
-                    <div class="eye-bar"></div>
+                    <div class="eye-bar koop"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-1.png" alt="">
@@ -397,7 +397,7 @@
                     <figcaption>
                         <h3>Justus</h3>
                     </figcaption>
-                    <div class="eye-bar"></div>
+                    <div class="eye-bar justus"></div>
                 </figure>
             </section>
         </article>
