--- a/index.html
+++ b/index.html
@@ -71,17 +71,22 @@
         <article class="mugshot-article-container">
             <h2 id="students">Alle Klasgenoten</h2>
             <section class="mugshot-image-container">
-                  <figure class="mugshot">
+                <figure class="mugshot">
+
                     <img class="mugshot-first" src="./assets/mugshots/student-2.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-2-2.png" alt="">
                     <figcaption>
-                        <h3>Emre</h3>
                         <a href="https://emrebahar0912.github.io/your-tribe-profile-card/">🔗</a>
-                        <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <div class="card-info">
+                        <p class="card-tekst1">Emre </p>
+                        <div class="divider"></div>
+                        <p class="card-tekst2">19</p>
+                    </div>
+
                     <!--https://emrebahar0912.github.io/your-tribe-profile-card/-->
-                    </figure>  
+                </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-3.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-3-2.png" alt="">
@@ -348,7 +353,7 @@
             </section>
             <h2 id="docenten">Docenten</h2>
             <section class="mugshot-image-container container-docenten">
-             
+
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-3.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/docent-3-2.png" alt="">
