cleaned up html also formatted to make it readable

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!-- Dit doet Roxy -->
+
     <header>
         <nav>
             <a href="#welcome"><img src="./assets/test-logo.png" alt=""></a>
@@ -19,55 +19,54 @@
             </ul>
         </nav>
     </header>
-    <svg class="wave4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+
+    <section>
+        <svg class="wave4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
          C384,26.5,480,21.5,576,34.65
          C672,48,768,80,864,98.65
          C960,117.5,1056,122.5,1152,106.65
          C1248,90.5,1344,53.5,1392,34.65
          L1440,16L1440,0L0,0Z">
-        </path>
+            </path>
+        </svg>
+    </section>
 
-    </svg>
     <main>
-        <!-- Dit doet Semih -->
-        <article>
-            <section>
-                <article id="welcome" class="welcome-page">
-                    <h1>Welkom bij 1I</h1>
-                    <section>
-                        <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                            <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
-         C384,26.5,480,21.5,576,34.65
-         C672,48,768,80,864,98.65
-         C960,117.5,1056,122.5,1152,106.65
-         C1248,90.5,1344,53.5,1392,34.65
-         L1440,16L1440,160L0,160Z">
-                            </path>
+        <h1 id="welcome" class="welcome-page">Welkom bij 1I</h1>
+        <section>
+            <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+                C384,26.5,480,21.5,576,34.65
+                C672,48,768,80,864,98.65
+                C960,117.5,1056,122.5,1152,106.65
+                C1248,90.5,1344,53.5,1392,34.65
+                L1440,16L1440,160L0,160Z">
+                </path>
 
-                        </svg>
-                        <svg class="wave2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                            <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
-         C384,26.5,480,21.5,576,34.65
-         C672,48,768,80,864,98.65
-         C960,117.5,1056,122.5,1152,106.65
-         C1248,90.5,1344,53.5,1392,34.65
-         L1440,16L1440,0L0,0Z">
-                            </path>
+            </svg>
 
-                        </svg>
-                    </section>
-                    <p>Zoek hieronder je klasgenoot op</p>
-                    <form>
-                        <input type="search" placeholder="Zoek je Klasgenoten">
-                    </form>
-                    </div>
-                </article>
-            </section>
-        </article>
-        <!-- Dit doet Gijs -->
+            <svg class="wave2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+                C384,26.5,480,21.5,576,34.65
+                C672,48,768,80,864,98.65
+                C960,117.5,1056,122.5,1152,106.65
+                C1248,90.5,1344,53.5,1392,34.65
+                L1440,16L1440,0L0,0Z">
+                </path>
 
-        <!-- Dit doet Roxy -->
+            </svg>
+        </section>
+
+        <section>
+            <article class="zoektekst">
+                <p>Zoek hieronder je klasgenoot op</p>
+                <form>
+                    <input type="search" placeholder="Zoek je Klasgenoten">
+                </form>
+            </article>
+        </section>
+
         <article class="mugshot-article-container">
             <h2 id="students">Alle Klasgenoten</h2>
             <section class="mugshot-image-container">
