--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-3.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-3-2.png" alt="">
                     <figcaption>
-                        <h3>Caitlin</h3>
+                        <p>Caitlin</p>
                         <a href="https://caitlin-fdnd.github.io/your-tribe-profile-card/">🔗</a>
                         <p>00</p>
                     </figcaption>
@@ -101,7 +101,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-4.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-4-2.png" alt="">
                     <figcaption>
-                        <h3>Ayoub</h3>
+                        <p>Ayoub</p>
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
@@ -110,7 +110,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-5.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-5-2.png" alt="">
                     <figcaption>
-                        <h3>Ilias</h3>
+                        <p>Ilias</p>
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
@@ -119,7 +119,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-6.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-6-2.png" alt="">
                     <figcaption>
-                        <h3>Isaac</h3>
+                        <p>Isaac</p>
                         <a href="https://isaaceswa.github.io/your-tribe-profile-card/">🔗</a>
                         <p>00</p>
                     </figcaption>
@@ -130,7 +130,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-7.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-7-2.png" alt="">
                     <figcaption>
-                        <h3>Kate</h3>
+                        <p>Kate</p>
                         <a href="https://kitkatisvibing.github.io/your-tribe-profile-card/">🔗</a>
                         <p>18 </p>
                     </figcaption>
@@ -141,7 +141,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-8.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-8-2.png" alt="">
                     <figcaption>
-                        <h3>Kayleigh</h3>
+                        <p>Kayleigh</p>
                         <a href="https://kayleighhhhh.github.io/profile-card-kayleigh/">🔗</a>
                         <p>00 </p>
                     </figcaption>
@@ -152,7 +152,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-9.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-9-2.png" alt="">
                     <figcaption>
-                        <h3>Mohamed</h3>
+                        <p>Mohamed</p>
                         <a href="https://mohamedelib.github.io/your-tribe-profile-card/">🔗</a>
                         <p>20 </p>
                     </figcaption>
@@ -163,7 +163,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-10.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-10-2.png" alt="">
                     <figcaption>
-                        <h3>Lesther</h3>
+                        <p>Lesther</p>
                         <a href="https://lestherluis.github.io/lesthercard/">🔗</a>
                         <p>00 </p>
                     </figcaption>
@@ -174,7 +174,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-11.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-11-2.png" alt="">
                     <figcaption>
-                        <h3>Khouloud</h3>
+                        <p>Khouloud</p>
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
@@ -183,7 +183,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-12.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-12-2.png" alt="">
                     <figcaption>
-                        <h3>Khitam</h3>
+                        <p>Khitam</p>
                         <a href="https://khiettt.github.io/your-tribe-profile-card/">🔗</a>
                         <p>20 </p>
                     </figcaption>
@@ -194,7 +194,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-13.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-13-2.png" alt="">
                     <figcaption>
-                        <h3>Mouaad</h3>
+                        <p>Mouaad</p>
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
@@ -203,7 +203,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-14.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-14-2.png" alt="">
                     <figcaption>
-                        <h3>Oumaima</h3>
+                        <p>Oumaima</p>
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
@@ -212,7 +212,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-15.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-15-2.png" alt="">
                     <figcaption>
-                        <h3>Rowan</h3>
+                        <p>Rowan</p>
                         <a href="https://scar055.github.io/your-tribe-profile-card/">🔗</a>
                         <p>00 </p>
                     </figcaption>
@@ -223,7 +223,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-16.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-16-2.png" alt="">
                     <figcaption>
-                        <h3>Roxy</h3>
+                        <p>Roxy</p>
                         <a href="https://rox-codelabs.github.io/your-tribe-profile-card/">🔗</a>
                         <p>25</p>
                     </figcaption>
@@ -234,7 +234,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-17.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-17-2.png" alt="">
                     <figcaption>
-                        <h3>Tjeerd</h3>
+                        <p>Tjeerd</p>
                         <a href="https://tjeerd-jw.github.io/your-tribe-profile-card/">🔗</a>
                         <p>00</p>
                     </figcaption>
@@ -245,7 +245,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-18.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-18-2.png" alt="">
                     <figcaption>
-                        <h3>Tin</h3>
+                        <p>Tin</p>
                         <a href="https://webtins.github.io/your-tribe-profile-card/">🔗</a>
                         <p>21</p>
                     </figcaption>
@@ -256,7 +256,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-19.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-19-2.png" alt="">
                     <figcaption>
-                        <h3>Semih</h3>
+                        <p>Semih</p>
                         <a href="https://hexterty46.github.io/your-tribe-profile-card/">🔗</a>
                         <p>19 </p>
                     </figcaption>
@@ -267,7 +267,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-20.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-20-2.png" alt="">
                     <figcaption>
-                        <h3>Seb</h3>
+                        <p>Seb</p>
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
@@ -276,7 +276,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-21.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-21-2.png" alt="">
                     <figcaption>
-                        <h3>Sivar</h3>
+                        <p>Sivar</p>
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
@@ -285,7 +285,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-22.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-22-2.png" alt="">
                     <figcaption>
-                        <h3>Sven</h3>
+                        <p>Sven</p>
                         <a href="https://svenvandijk22.github.io/your-tribe-profile-card/">🔗</a>
                         <p>22 </p>
                     </figcaption>
@@ -296,7 +296,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-23.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-23-2.png" alt="">
                     <figcaption>
-                        <h3>Thomas</h3>
+                        <p>Thomas</p>
                         <a href="https://thomasseisveld.github.io/profilecard-Thomas/">🔗</a>
                         <p>19 </p>
                     </figcaption>
@@ -307,7 +307,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-1.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-1-2.png" alt="">
                     <figcaption>
-                        <h3>Gijs</h3>
+                        <p>Gijs</p>
                         <a href="https://gijscreator.github.io/your-tribe-profile-card/">🔗</a>
                         <p>19 </p>
                     </figcaption>
@@ -318,7 +318,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-24.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-24-2.png" alt="">
                     <figcaption>
-                        <h3>Angle</h3>
+                        <p>Angle</p>
                         <a href="https://angelaaliyah12.github.io/your-tribe-profile-card/">🔗</a>
                         <p>00 </p>
                     </figcaption>
@@ -357,7 +357,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/docent-3.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/docent-3-2.png" alt="">
                     <figcaption>
-                        <h3>Joost</h3>
+                        <p>Joost</p>
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
@@ -365,7 +365,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/docent-2.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/docent-2-2.png" alt="">
                     <figcaption>
-                        <h3>Koop</h3>
+                        <p>Koop</p>
                         <a href="https://koopreynders.github.io/profile-card/">🔗</a>
                     </figcaption>
                     <div class="eye-bar koop"></div>
@@ -374,7 +374,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/docent-1.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/docent-1-2.png" alt="">
                     <figcaption>
-                        <h3>Suus</h3>
+                        <p>Suus</p>
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
@@ -382,7 +382,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/docent-4.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/docent-4-2.png" alt="">
                     <figcaption>
-                        <h3>Cyd</h3>
+                        <p>Cyd</p>
                         <a href="https://cydstumpel.github.io/your-tribe-profile-card/">🔗</a>
                     </figcaption>
                     <div class="eye-bar"></div>
@@ -391,7 +391,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/docent-5.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/docent-5-2.png" alt="">
                     <figcaption>
-                        <h3>Krijn</h3>
+                        <p>Krijn</p>
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
@@ -399,7 +399,7 @@
                     <img class="mugshot-first" src="./assets/mugshots/docent-6.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/docent-6-2.png" alt="">
                     <figcaption>
-                        <h3>Justus</h3>
+                        <p>Justus</p>
                     </figcaption>
                     <div class="eye-bar justus"></div>
                 </figure>
@@ -429,7 +429,7 @@
             </svg>
         </section>
         <!-- Dit doet Gijs -->
-        <h3 class="hotspots" id="locations"> Hotspots binnen het HVA</h3>
+        <p class="hotspots" id="locations"> Hotspots binnen het HVA</p>
         <section class="wrapper-location">
             <article class="grid-image">
                 <img class="location-image" src="./assets/aquarium.png">
