--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-2.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-2-2.png" alt="">
                     <figcaption>
-                        <a href="https://emrebahar0912.github.io/your-tribe-profile-card/">🔗</a>
                     </figcaption>
                     <div class="eye-bar"></div>
-                    <div class="card-info">
+                    <a class="card-info" href="https://emrebahar0912.github.io/your-tribe-profile-card">
                         <p class="card-tekst1">Emre </p>
-                        <div class="divider"></div>
                         <p class="card-tekst2">19</p>
-                    </div>
+                        <p class="card-tekst3">Mijn visitekaartje</p>
+                        <p class="card-tekst4">Hogeschool van Amsterdam</p>
+                    </a>
+                    
 
                     <!--https://emrebahar0912.github.io/your-tribe-profile-card/-->
                 </figure>
