--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
         <article class="mugshot-article-container">
             <h2 id="students">Alle Klasgenoten</h2>
             <section class="mugshot-image-container">
-                <figure class="mugshot">
-
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-2.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-2-2.png" alt="">
                     <figcaption>
@@ -83,11 +82,9 @@
                         <p class="card-tekst3">Mijn visitekaartje</p>
                         <p class="card-tekst4">Hogeschool van Amsterdam</p>
                     </a>
-                    
-
                     <!--https://emrebahar0912.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-3.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-3-2.png" alt="">
                     <figcaption>
@@ -98,7 +95,7 @@
                     <div class="eye-bar"></div>
                     <!--https://caitlin-fdnd.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-4.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-4-2.png" alt="">
                     <figcaption>
@@ -107,7 +104,7 @@
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-5.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-5-2.png" alt="">
                     <figcaption>
@@ -116,7 +113,7 @@
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-6.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-6-2.png" alt="">
                     <figcaption>
@@ -127,7 +124,7 @@
                     <div class="eye-bar"></div>
                     <!--https://isaaceswa.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-7.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-7-2.png" alt="">
                     <figcaption>
@@ -138,7 +135,7 @@
                     <div class="eye-bar glasses"></div>
                     <!--https://kitkatisvibing.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-8.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-8-2.png" alt="">
                     <figcaption>
@@ -149,7 +146,7 @@
                     <div class="eye-bar"></div>
                     <!--https://kayleighhhhh.github.io/profile-card-kayleigh/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-9.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-9-2.png" alt="">
                     <figcaption>
@@ -160,7 +157,7 @@
                     <div class="eye-bar"></div>
                     <!--https://mohamedelib.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-10.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-10-2.png" alt="">
                     <figcaption>
@@ -171,7 +168,7 @@
                     <div class="eye-bar"></div>
                     <!--https://lestherluis.github.io/lesthercard/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-11.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-11-2.png" alt="">
                     <figcaption>
@@ -180,7 +177,7 @@
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-12.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-12-2.png" alt="">
                     <figcaption>
@@ -191,7 +188,7 @@
                     <div class="eye-bar"></div>
                     <!--https://khiettt.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-13.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-13-2.png" alt="">
                     <figcaption>
@@ -200,7 +197,7 @@
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-14.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-14-2.png" alt="">
                     <figcaption>
@@ -209,7 +206,7 @@
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-15.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-15-2.png" alt="">
                     <figcaption>
@@ -220,7 +217,7 @@
                     <div class="eye-bar glasses"></div>
                     <!--https://scar055.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-16.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-16-2.png" alt="">
                     <figcaption>
@@ -231,7 +228,7 @@
                     <div class="eye-bar"></div>
                     <!--https://rox-codelabs.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-17.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-17-2.png" alt="">
                     <figcaption>
@@ -242,7 +239,7 @@
                     <div class="eye-bar glasses"></div>
                     <!--https://tjeerd-jw.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-18.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-18-2.png" alt="">
                     <figcaption>
@@ -253,7 +250,7 @@
                     <div class="eye-bar glasses"></div>
                     <!--https://webtins.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-19.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-19-2.png" alt="">
                     <figcaption>
@@ -264,7 +261,7 @@
                     <div class="eye-bar"></div>
                     <!--https://hexterty46.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-20.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-20-2.png" alt="">
                     <figcaption>
@@ -273,7 +270,7 @@
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-21.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-21-2.png" alt="">
                     <figcaption>
@@ -282,7 +279,7 @@
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-22.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-22-2.png" alt="">
                     <figcaption>
@@ -293,7 +290,7 @@
                     <div class="eye-bar"></div>
                     <!--https://svenvandijk22.github.io/your-tribe-profile-card/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-23.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-23-2.png" alt="">
                     <figcaption>
@@ -304,7 +301,7 @@
                     <div class="eye-bar"></div>
                     <!--https://thomasseisveld.github.io/profilecard-Thomas/-->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-1.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-1-2.png" alt="">
                     <figcaption>
@@ -315,7 +312,7 @@
                     <div class="eye-bar"></div>
                     <!-- https://gijscreator.github.io/your-tribe-profile-card/ -->
                 </figure>
-                <figure class="mugshot">
+                <figure class="mugshot student">
                     <img class="mugshot-first" src="./assets/mugshots/student-24.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-24-2.png" alt="">
                     <figcaption>
@@ -328,7 +325,7 @@
                 </figure>
 
             </section>
-            <button>Meer Foto's</button>
+            <button class="meer-fotos">Meer Foto's</button>
             <section>
                 <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                     <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
