--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
          C1248,90.5,1344,53.5,1392,34.65
          L1440,16L1440,0L0,0Z">
         </path>
-
-    </svg>
+        </svg>
+    </section>
     <main>
         <h1 id="welcome" class="welcome-page">Welkom bij 1I</h1>
         <section>
