--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     </section>
 
     <main>
-        <h1 id="welcome" class="welcome-page">Welkom bij 1I</h1>
+        <h1 id="welcome" class="welcome-page">Squadpage van 1I</h1>
+        <p id="paragraaf">Welkom op de Squadpage van 1I, je kan hieronder je klasgenoten opzoeken.</p>
         <section>
             <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
@@ -55,7 +56,6 @@
                 C1248,90.5,1344,53.5,1392,34.65
                 L1440,16L1440,0L0,0Z">
                 </path>
-
             </svg>
         </section>
 
