--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
         </svg>
     </section>
     <main>
-        <h1 id="welcome" class="welcome-page">Squadpage van 1I</h1>
-        <p id="paragraaf">Welkom op de Squadpage van 1I, je kan hieronder je klasgenoten opzoeken.</p>
+        <section class="welcome-section">
+            <div class="background-collage">
+                <img src="./assets/mugshots/mugshotcollectie.png" width="800px" height="800px" alt="">
+            </div>
+            <h1 id="welcome" class="welcome-page">Squadpage van 1I</h1>
+            <p id="paragraaf">Welkom op de Squadpage van 1I, je kan hieronder je klasgenoten opzoeken.</p>
+        </section>
         <section>
             <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
