--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
     </section>
     <main>
         <section class="welcome-section">
-            <div class="background-collage">
-                <img src="./assets/mugshots/mugshotcollectie.png" width="800px" height="800px" alt="">
-            </div>
+            <div class="background-collage"></div>
             <h1 id="welcome" class="welcome-page">Squadpage van 1I</h1>
             <p id="paragraaf">Welkom op de Squadpage van 1I, je kan hieronder je klasgenoten opzoeken.</p>
         </section>
