--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#welcome"><img src="./assets/test-logo.png" alt=""></a>
             <ul class="navigation">
                 <li><a href="#students">Klasgenoten</a></li>
+                <li><a href="#docenten">Docenten</a></li>
                 <li><a href="#locations">Locaties</a></li>
                 <li><a href="#credits">Credits</a></li>
             </ul>
@@ -347,7 +348,6 @@
             </section>
             <h2 id="docenten">Docenten</h2>
             <section class="mugshot-image-container container-docenten">
-
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-3.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/docent-3-2.png" alt="">
